@@ -2,6 +2,9 @@ Revision history for Perl extension Finance-Bank-Bankwest
 
 {{$NEXT}}
 
+  - List all possible transaction type codes at this time, and their
+    meanings.
+
   - Move generic web page handling logic into a dependency
     (HTTP::Response::Switch).
 
